--- a/hello-world-java/Dockerfile
+++ b/hello-world-java/Dockerfile
@@ -1,5 +1,11 @@
 FROM maven:3.9.6-amazoncorretto-21-al2023 AS build
 WORKDIR /home/app
+
+COPY ./pom.xml /home/app/pom.xml
+COPY ./src/main/java/com/in28minutes/rest/webservices/restfulwebservices/RestfulWebServicesApplication.java	/home/app/src/main/java/com/in28minutes/rest/webservices/restfulwebservices/RestfulWebServicesApplication.java
+
+RUN mvn -f /home/app/pom.xml clean package
+
 COPY . /home/app
 RUN mvn -f /home/app/pom.xml clean package
 
